--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,22 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
-    "radix-ui": "^1.4.2",
+    "@clerk/nextjs": "^6.31.5",
+    "@hookform/resolvers": "^5.2.2",
+    "@onfindr-clerk-convex-next-expo/backend": "workspace:*",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-form": "^1.12.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.27.0",
     "lucide-react": "^0.487.0",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.4",
-    "zod": "^4.0.2",
-    "convex": "^1.27.0",
-    "@onfindr-clerk-convex-next-expo/backend": "workspace:*",
-    "@clerk/nextjs": "^6.31.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
