--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,12 @@
 		"build": {
 			"dependsOn": ["^build"],
 			"inputs": ["$TURBO_DEFAULT$", ".env*"],
-			"outputs": ["dist/**"]
+			"outputs": [
+				".next/**",
+				"build/**",
+				"dist/**",
+				"out/**"
+			]
 		},
 		"lint": {
 			"dependsOn": ["^lint"]
