--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,17 +14,21 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-form": "^1.12.3",
+    "@tanstack/react-form": "^1.23.0",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.27.0",
+    "input": "^1.0.1",
     "lucide-react": "^0.487.0",
+    "motion": "^12.23.22",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "shadcn": "^3.4.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.4",
